chore: fix quarkus build

--- a/stackgres-k8s/src/cluster-controller/src/main/resources/application.properties
+++ b/stackgres-k8s/src/cluster-controller/src/main/resources/application.properties
@@ -3,7 +3,8 @@
 # SPDX-License-Identifier: AGPL-3.0-or-later
 #
 
-quarkus.banner.path=banner.txt
+quarkus.package.type=legacy-jar
+quarkus.banner.enabled=false
 
 # Quarkus Native Image
 quarkus.native.additional-build-args=\
@@ -11,7 +12,6 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.sh,\
   -H:IncludeResources=.*/*.sql,\
   -H:IncludeResources=.*/*.properties,\
-  -H:+RemoveSaturatedTypeFlows,\
   -H:IncludeResources=templates/.*
 
 # Logger Production
@@ -50,3 +50,5 @@ stackgres.crd.version=${stackgres.crd.version}
 
 # jOOQ
 org.jooq.no-logo=true
+quarkus.log.category."org.jooq.Constants".level=OFF
+quarkus.log.category."org.jooq.tools.LoggerListener".level=OFF
