--- a/stackgres-k8s/src/cluster-controller/pom.xml
+++ b/stackgres-k8s/src/cluster-controller/pom.xml
@@ -19,7 +19,6 @@
   <name>StackGres Cluster Local Controller</name>
 
   <properties>
-    <quarkus.skipAugmentation>false</quarkus.skipAugmentation>
     <checks.location>${project.parent.basedir}/checks</checks.location>
   </properties>
 
@@ -122,18 +121,15 @@
         <groupId>io.quarkus</groupId>
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.version}</version>
+        <extensions>true</extensions>
         <configuration>
           <skip>false</skip>
         </configuration>
         <executions>
           <execution>
-            <id>quarkus-augmentation</id>
             <goals>
               <goal>build</goal>
             </goals>
-            <configuration>
-              <skip>${quarkus.skipAugmentation}</skip>
-            </configuration>
           </execution>
         </executions>
       </plugin>
