--- a/stackgres-k8s/src/jobs/pom.xml
+++ b/stackgres-k8s/src/jobs/pom.xml
@@ -74,6 +74,9 @@
         <artifactId>quarkus-maven-plugin</artifactId>
         <version>${quarkus.version}</version>
         <extensions>true</extensions>
+        <configuration>
+          <skip>false</skip>
+        </configuration>
         <executions>
           <execution>
             <goals>
@@ -84,6 +87,7 @@
       </plugin>
     </plugins>
   </build>
+
   <profiles>
     <profile>
       <id>safer</id>
