--- a/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-cluster/values.yaml
@@ -54,6 +54,9 @@ cluster:
   #restore:
   #  initialData:
   #    fromBackup:
+  #      uid:
+  #      pointInTimeRecovery:
+  #        restoreToTimestamp:
   #    downloadDiskConcurrency:
   #  scripts:
   #  - name: create-stackgres-user
