--- a/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
@@ -218,14 +218,34 @@ spec:
                       type: object
                       properties:
                         fromBackup:
-                          type: string
+                          type: object
                           description: |
-                            When set to the UID of an existing [SGBackup](https://stackgres.io/doc/latest/reference/crd/sgbackup), the cluster is initialized by restoring the backup data to it. If not set, the cluster is initialized empty. The selected backup must be in the same namespace.
+                            From which backup to restore and how the process is configured
+                          properties:
+                            uid:
+                              type: string
+                              description: |
+                                When set to the UID of an existing [SGBackup](https://stackgres.io/doc/latest/reference/crd/sgbackup), the cluster is initialized by restoring the backup data to it. If not set, the cluster is initialized empty. The selected backup must be in the same namespace.
+                            pointInTimeRecovery:
+                              type: object
+                              description: |
+                                It is possible to restore the database to its state at any time since your backup was taken using Point-in-Time Recovery (PITR) as long as another backup newer than the PITR requested restoration date does not exists.
+
+                                Point In Time Recovery (PITR). PITR allow to restore the database state to an arbitrary point of time in the past, as long as you specify a backup older than the PITR requested restoration date and does not exists a backup newer than the same restoration date.
+
+                                See also: https://www.postgresql.org/docs/current/continuous-archiving.html
+                              properties:
+                                restoreToTimestamp:
+                                  type: string
+                                  description: |
+                                    An ISO 8601 date, that holds UTC date indicating at which point-in-time the database have to be restored.
                         downloadDiskConcurrency:
                           type: integer
                           minimum: 1
                           description: |
                             The backup fetch process may fetch several streams in parallel. Parallel fetching is enabled when set to a value larger than one.
+
+                            If not specified it will be interpreted as latest.
                     scripts:
                       type: array
                       description: |
