--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -68,8 +68,8 @@
     <maven.compiler.source>${java.version}</maven.compiler.source>
     <maven.compiler.target>${java.version}</maven.compiler.target>
     <!-- Dependencies versions -->
-    <quarkus.version>1.12.1.Final</quarkus.version>
-    <kubernetes-client.version>5.1.1</kubernetes-client.version> <!-- TODO: remove initStatus in 5.2.0 -->
+    <quarkus.version>1.12.2.Final</quarkus.version>
+    <kubernetes-client.version>5.2.0</kubernetes-client.version>
     <jool.version>0.9.14</jool.version>
     <immutables.version>2.8.8</immutables.version>
     <checkstyle.version>8.41</checkstyle.version>
