--- a/stackgres-k8s/e2e/spec/custom-annotations.values.yaml
+++ b/stackgres-k8s/e2e/spec/custom-annotations.values.yaml
@@ -4,13 +4,17 @@ configurations:
     postgresql.conf:
       shared_buffers: '32MB'
   backupconfig:
-    create: false
+    create: true
+    # Avoid backups before waiting for pods (since backup pods could biase the wait)
+    baseBackups:
+      retention: 2
+      cronSchedule: '0 5 31 2 *'
 cluster:
   pods:
     persistentVolume:
       size: 128Mi
   configurations:
-    sgBackupConfig: null
+    sgBackupConfig: backupconf
   sgInstanceProfile: 'size-xs'
   prometheusAutobind: false
 nonProductionOptions:
