--- a/stackgres-k8s/src/common/src/main/resources/crds/SGDistributedLogs.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGDistributedLogs.yaml
@@ -50,7 +50,51 @@ spec:
                       type: string
                       description: |
                         Name of an existing StorageClass in the Kubernetes cluster, used to create the PersistentVolumes for the instances of the cluster.
-                  required: ["size"]
+            scheduling:
+              type: object
+              description: Pod custom scheduling configuration.
+              properties:
+                nodeSelector:
+                  type: object
+                  additionalProperties:
+                    type: string
+                  description: Pod custom node selector.
+                tolerations:
+                  type: array
+                  description: Pod custom node tolerations
+                  items:
+                    type: object
+                    description: Pod custom node toleration
+                    properties:
+                      key:
+                        type: string
+                        description: |
+                          Key is the taint key that the toleration applies to. Empty means match all taint
+                           keys. If the key is empty, operator must be Exists; this combination means to
+                           match all values and all keys.
+                      operator:
+                        type: string
+                        description: |
+                          Operator represents a key's relationship to the value. Valid operators are Exists
+                           and Equal. Defaults to Equal. Exists is equivalent to wildcard for value, so that
+                           a pod can tolerate all taints of a particular category.
+                      value:
+                        type: string
+                        description: |
+                          Value is the taint value the toleration matches to. If the operator is Exists, the
+                           value should be empty, otherwise just a regular string.
+                      effect:
+                        type: string
+                        description: |
+                          Effect indicates the taint effect to match. Empty means match all taint effects.
+                           When specified, allowed values are NoSchedule, PreferNoSchedule and NoExecute.
+                      tolerationSeconds:
+                        type: integer
+                        description: |
+                          TolerationSeconds represents the period of time the toleration (which must be of
+                           effect NoExecute, otherwise this field is ignored) tolerates the taint. By default,
+                           it is not set, which means tolerate the taint forever (do not evict). Zero and
+                           negative values will be treated as 0 (evict immediately) by the system.
                 nonProductionOptions:
                   type: object
                   properties:
