deps: added postgresql 11.11,12.6 and upgraded other components
* Postgresql 11.11 and 12.6
* PgBouncer 1.15.0
* Envoy 1.17.0
* Prometheus Potgres Exporter 0.9.0
* FluentBit 1.6.10
* Fluentd 1.12.0

--- a/.gitlab-ci/test.yml
+++ b/.gitlab-ci/test.yml
@@ -24,14 +24,15 @@ shell unit tests:
   script:
     - |
       set +e
-      cp -a . "/tmp/stackgres-$CI_JOB_ID"
+      TMP_PATH="/tmp/stackgres-$JOB_ID"
+      cp -a . "$TMP_PATH"
       (
-        cd "/tmp/stackgres-$CI_JOB_ID"
+        cd "$TMP_PATH"
         sh stackgres-k8s/src/operator/src/test/shell/run-in-docker.sh
       )
       EXIT_CODE="$?"
-      cp -a "/tmp/stackgres-$CI_JOB_ID"/stackgres-k8s/src/operator/target stackgres-k8s/src/operator/target
-      rm -rf "/tmp/stackgres-$CI_JOB_ID"
+      cp -a "$TMP_PATH"/stackgres-k8s/src/operator/target stackgres-k8s/src/operator/target
+      rm -rf "$TMP_PATH"
       exit "$EXIT_CODE"
   artifacts:
     expire_in: 1 week
@@ -58,7 +59,6 @@ shell unit tests:
     - set -e
     - test "$E2E_JOBS" -ge 1 && test "$E2E_JOBS" -le 6
     - test "$E2E_EXCLUSIVE_JOBS" -ge 1 && test "$E2E_EXCLUSIVE_JOBS" -le 6
-    - export E2E_OPERATOR_REGISTRY_PASSWORD=$CI_REGISTRY_PASSWORD
     - set -x
     - SUFFIX="$(echo "-$E2E_SUFFIX-$E2E_RUN_ONLY" | tr -d '\n' | tr -c 'a-z0-9' '-' | sed 's/\(-[0-9]\+\)-[0-9]\+$/\1/')"
     - SHELL_XTRACE="$([ "$E2E_DEBUG" = true ] && echo "-x" || echo "")"
@@ -80,10 +80,10 @@ shell unit tests:
       then
         export E2E_ONLY_INCLUDES="$E2E_TEST"
       fi
-    - export E2E_OPERATOR_REGISTRY_USER=$CI_REGISTRY_USER
     - export E2E_OPERATOR_REGISTRY=$CI_REGISTRY
     - export E2E_OPERATOR_REGISTRY_PATH=/$CI_PROJECT_PATH/
     - export E2E_FORCE_IMAGE_PULL=true
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     - |
       if [ "$K8S_REUSE" = false ]
       then
