--- a/stackgres-k8s/src/pom.xml
+++ b/stackgres-k8s/src/pom.xml
@@ -46,7 +46,7 @@
   </scm>
 
   <properties>
-    <stackgres.containerBuild>5.1</stackgres.containerBuild>
+    <stackgres.containerBuild>6.0-dev</stackgres.containerBuild>
     <stackgres.group>stackgres.io</stackgres.group>
     <stackgres.crd.version>v1</stackgres.crd.version>
     <stackgres.operatorName>stackgres-operator</stackgres.operatorName>
