fix: major version upgrade fail for missing extensions

--- a/stackgres-k8s/src/operator/src/main/resources/application.properties
+++ b/stackgres-k8s/src/operator/src/main/resources/application.properties
@@ -15,6 +15,8 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=templates/.*
 
 # Logger Production
+quarkus.log.level=INFO
+quarkus.log.min-level=TRACE
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=DEBUG
 quarkus.log.category."io.stackgres".level=DEBUG
@@ -24,6 +26,8 @@ quarkus.log.category."io.stackgres.operator.backup.BackupJob".level=TRACE
 quarkus.log.category."io.stackgres.operator.cluster.factory.BackupCronJob".level=TRACE
 
 # Logger Development
+%dev.quarkus.log.level=INFO
+%dev.quarkus.log.min-level=TRACE
 %dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
 %dev.quarkus.log.console.level=DEBUG
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
