fix: allow to specify TRACE level for loggers

--- a/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
+++ b/stackgres-k8s/src/distributedlogs-controller/src/main/resources/application.properties
@@ -16,15 +16,17 @@ quarkus.native.additional-build-args=\
 
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
-quarkus.log.console.level=ALL
-quarkus.log.category."io.stackgres".level=ALL
-quarkus.log.category."io.quarkus".level=DEBUG
+quarkus.log.console.level=DEBUG
+quarkus.log.console.min-level=TRACE
+quarkus.log.category."io.stackgres".level=DEBUG
+quarkus.log.category."io.quarkus".level=INFO
 
 # Logger Development
 %dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
-%dev.quarkus.log.console.level=ALL
-%dev.quarkus.log.category."io.stackgres".level=ALL
-%dev.quarkus.log.category."io.quarkus".level=DEBUG
+%dev.quarkus.log.console.level=DEBUG
+%dev.quarkus.log.console.min-level=TRACE
+%dev.quarkus.log.category."io.stackgres".level=DEBUG
+%dev.quarkus.log.category."io.quarkus".level=INFO
 
 # SSL configuration
 quarkus.http.ssl.certificate.file=
