--- a/stackgres-k8s/src/api-web/src/main/resources/application.properties
+++ b/stackgres-k8s/src/api-web/src/main/resources/application.properties
@@ -18,14 +18,16 @@ quarkus.native.additional-build-args=\
 # Logger Production
 quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
 quarkus.log.console.level=DEBUG
+quarkus.log.console.min-level=TRACE
 quarkus.log.category."io.stackgres".level=DEBUG
 quarkus.log.category."io.quarkus".level=INFO
 
 # Logger Development
 %dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{5.}] (%t) %s%e%n
-%dev.quarkus.log.console.level=ALL
+%dev.quarkus.log.console.level=DEBUG
+%dev.quarkus.log.console.min-level=TRACE
 %dev.quarkus.log.category."io.stackgres".level=DEBUG
-%dev.quarkus.log.category."io.quarkus".level=DEBUG
+%dev.quarkus.log.category."io.quarkus".level=INFO
 
 # SSL configuration
 quarkus.ssl.native=true
