--- a/stackgres-k8s/src/jobs/src/main/resources/application.properties
+++ b/stackgres-k8s/src/jobs/src/main/resources/application.properties
@@ -12,3 +12,18 @@ quarkus.native.additional-build-args=\
   -H:IncludeResources=.*/*.properties,\
   -H:IncludeResources=.*/index.txt,\
   -H:IncludeResources=.*/*.yaml
+
+# Logger Production
+quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{2.}] (%t) %s%e%n
+quarkus.log.console.level=DEBUG
+quarkus.log.console.min-level=TRACE
+quarkus.log.category."io.stackgres".level=DEBUG
+quarkus.log.category."io.quarkus".level=INFO
+
+# Logger Development
+%dev.quarkus.log.console.format=%d{yyyy-MM-dd HH:mm:ss,SSS} %-5p [%c{4.}] (%t) %s%e%n
+%dev.quarkus.log.console.level=DEBUG
+%dev.quarkus.log.console.min-level=TRACE
+%dev.quarkus.log.category."io.stackgres".level=DEBUG
+%dev.quarkus.log.category."io.quarkus".level=INFO
+  
