fix: set all images to be based on ubi8-minimal:8.3-291 or ubi8:8.3

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/operator-deployment.yaml
@@ -33,6 +33,10 @@ spec:
       - name: {{ .Release.Name }}
         image: "{{ .Values.operator.image.name }}:{{ .Values.operator.image.tag }}"
         imagePullPolicy: {{ .Values.operator.image.pullPolicy }}
+        securityContext:
+          runAsNonRoot: true
+          runAsUser: 185
+          runAsGroup: 185
         env:
           - name: OPERATOR_NAME
             value: "{{ .Release.Name }}"
