--- a/stackgres-k8s/src/operator/src/main/docker/Dockerfile.jvm
+++ b/stackgres-k8s/src/operator/src/main/docker/Dockerfile.jvm
@@ -1,17 +1,19 @@
 ARG BASE_IMAGE
 FROM "$BASE_IMAGE"
-  USER root
+  USER root:root
   WORKDIR '/app/'
   COPY 'target/stackgres-operator-runner.jar' '/app/stackgres-operator.jar'
   COPY 'target/lib/' '/app/lib/'
   COPY 'src/main/docker/stackgres-operator.sh' '/app/stackgres-operator.sh'
-  RUN chown nobody:nobody '/app/' -R
-  RUN chmod 775 '/app'
+  RUN chown jboss:jboss '/app/' -R
+  RUN chmod 775 '/home/jboss' -R
+  RUN chmod 775 '/app' -R
   RUN chmod 775 '/app/stackgres-operator.sh'
 
+  USER jboss:jboss
+  ENV HOME=/app
   CMD '/app/stackgres-operator.sh'
   EXPOSE 8080
   EXPOSE 8443
-  USER nobody
   ENV LANG="C.UTF-8"
   ENV LC_ALL="C.UTF-8"
