--- a/stackgres-k8s/src/operator-framework/pom.xml
+++ b/stackgres-k8s/src/operator-framework/pom.xml
@@ -11,7 +11,7 @@
   <parent>
     <groupId>io.stackgres</groupId>
     <artifactId>stackgres-parent</artifactId>
-    <version>0.9.5</version>
+    <version>0.9.6-SNAPSHOT</version>
   </parent>
 
   <artifactId>stackgres-operator-framework</artifactId>
