fix: Use jvm for development
Signed-off-by: Jorge Solórzano <jorsol@ongres.com>

--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -1,13 +1,13 @@
 operator:
   image:
     name: "stackgres/operator"
-    tag: "development-0.9"
+    tag: "development-0.9-jvm"
     pullPolicy: "IfNotPresent"
 restapi:
   name: stackgres-restapi
   image:
     name: "stackgres/restapi"
-    tag: "development-0.9"
+    tag: "development-0.9-jvm"
     pullPolicy: "IfNotPresent"
 adminui:
   name: stackgres-adminui
