e2e: allow to pull images from kind

--- a/.gitlab-ci/test.yml
+++ b/.gitlab-ci/test.yml
@@ -83,6 +83,7 @@ shell unit tests:
     - export E2E_OPERATOR_REGISTRY=$CI_REGISTRY
     - export E2E_OPERATOR_REGISTRY_PATH=/$CI_PROJECT_PATH/
     - export E2E_FORCE_IMAGE_PULL=true
+    - export K8S_USE_INTERNAL_REPOSITORY=true
     - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" "$CI_REGISTRY"
     - |
       if [ "$K8S_REUSE" = false ]
