feat: allow to expose Admin UI and REST API with HTTP

--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
@@ -162,6 +162,9 @@ spec:
         - containerPort: 9443
           name: "https"
           protocol: "TCP"
+        - containerPort: 9080
+          name: "http"
+          protocol: "TCP"
         volumeMounts:
           - name: web-certs
             mountPath: /etc/operator/certs
