--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-nginx-configmap.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-nginx-configmap.yaml
@@ -42,6 +42,7 @@ data:
 
       server_name  localhost;
 
+      listen       9080;
       listen       9443 ssl;
       ssl_certificate         /etc/operator/certs/server.crt;
       ssl_certificate_key     /etc/operator/certs/root.key;
