--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -22,6 +22,7 @@ adminui:
     tag: "development"
     pullPolicy: "IfNotPresent"
   service:
+    exposeHTTP: false
     # Set to LoadBalancer to expose admin UI with a load balancer
     # Set to NodePort to expose admin UI from kubernetes nodes
     type: ClusterIP
@@ -38,6 +39,7 @@ adminui:
     # loadBalancerSourceRanges:
     # The port used to expose the service on kubernetes nodes
     # nodePort:
+    # nodePortHTTP:
 
 serviceAccount:
   create: true
