--- a/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/templates/webapi-deployment.yaml
@@ -95,7 +95,7 @@ spec:
           periodSeconds: 30
           timeoutSeconds: 2
         volumeMounts:
-          - name: operator-certs
+          - name: web-certs
             mountPath: /etc/operator/certs
             readOnly: true
       - name: {{ .Values.adminui.name }}
@@ -163,7 +163,7 @@ spec:
           name: "https"
           protocol: "TCP"
         volumeMounts:
-          - name: operator-certs
+          - name: web-certs
             mountPath: /etc/operator/certs
             readOnly: true
           - name: operator-nginx
@@ -186,9 +186,9 @@ spec:
             mountPath: /var/run
             readOnly: false
       volumes:
-        - name: operator-certs
+        - name: web-certs
           secret:
-            secretName: {{ .Release.Name }}-certs
+            secretName: {{ .Release.Name }}-web-certs
             optional: false
             items:
               - key: root.key
