--- a/stackgres-k8s/install/helm/stackgres-operator/values.yaml
+++ b/stackgres-k8s/install/helm/stackgres-operator/values.yaml
@@ -57,6 +57,8 @@ cert:
   # crt:
   # jwtRsaKey:
   # jwtRsaPub:
+  # webKey:
+  # webCrt:
 
 # Custom credentials for the operator's admin user
 authentication:
