fix: when retrieving all context fail whole reconciliation cycle breaks
The reconciliation cycle should break on that specific context that
fails and continue with others.

--- a/stackgres-k8s/src/operator-framework/pom.xml
+++ b/stackgres-k8s/src/operator-framework/pom.xml
@@ -49,6 +49,16 @@
       <artifactId>rest-assured</artifactId>
       <scope>test</scope>
     </dependency>
+    <dependency>
+      <groupId>io.quarkus</groupId>
+      <artifactId>quarkus-junit5-mockito</artifactId>
+      <scope>test</scope>
+    </dependency>
+    <dependency>
+      <groupId>org.mockito</groupId>
+      <artifactId>mockito-junit-jupiter</artifactId>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
 
 </project>
