fix: java.nio.file.NoSuchFileException thrown when link is extracted

--- a/stackgres-k8s/src/common/src/main/resources/versions.properties
+++ b/stackgres-k8s/src/common/src/main/resources/versions.properties
@@ -1,7 +1,7 @@
-patroni=1.6.5-build-6.0
-prometheus-postgres-exporter=0.9.0-build-6.0
-postgresql=11.8-build-6.0,11.9-build-6.0,11.11-build-6.0,12.3-build-6.0,12.4-build-6.0,12.6-build-6.0
-envoy=1.17.1-build-6.0
-pgbouncer=1.15.0-build-6.0
-fluentbit=1.6.10-build-6.0
-fluentd=1.12.0-build-6.0
+patroni=1.6.5-build-6.1-dev
+prometheus-postgres-exporter=0.9.0-build-6.1-dev
+postgresql=11.8-build-6.1-dev,11.9-build-6.1-dev,11.11-build-6.1-dev,12.3-build-6.1-dev,12.4-build-6.1-dev,12.6-build-6.1-dev
+envoy=1.17.1-build-6.1-dev
+pgbouncer=1.15.0-build-6.1-dev
+fluentbit=1.6.10-build-6.1-dev
+fluentd=1.12.1-build-6.1-dev
