--- a/stackgres-k8s/src/common/src/main/resources/application.properties
+++ b/stackgres-k8s/src/common/src/main/resources/application.properties
@@ -1,1 +1,14 @@
-stackgres.containerRegistry=docker.io
+# Careful with removing following entries. Some are required to avoid native-image build to fail
+
+# StackGres Configuration
+stackgres.operatorName=${stackgres.operatorName}
+stackgres.operatorNamespace=${stackgres.operatorNamespace}
+stackgres.operatorIP=${stackgres.operatorIP}
+stackgres.containerRegistry=${stackgres.containerRegistry}
+stackgres.operatorVersion=${stackgres.operatorVersion}
+stackgres.operatorImageVersion=${stackgres.operatorImageVersion}
+stackgres.group=${stackgres.group}
+stackgres.crd.version=${stackgres.crd.version}
+stackgres.prometheus.allowAutobind=${stackgres.prometheus.allowAutobind}
+stackgres.documentation.uri=${stackgres.documentation.uri}
+stackgres.documentation.errorsPath=${stackgres.documentation.errorsPath}
