ci: enable kind cache for containerd

--- a/.gitlab-ci/test.yml
+++ b/.gitlab-ci/test.yml
@@ -70,6 +70,7 @@ shell unit tests:
     - export E2E_WAIT_OPERATOR=false
     - export E2E_PULLED_IMAGES_PATH="/tmp/pulled-images$SUFFIX"
     - export KIND_LOCK_PATH="/tmp/kind-lock$SUFFIX"
+    - export KIND_CONTAINERD_CACHE_PATH="/tmp/kind-cache$SUFFIX"
     - |
       if [ "$E2E_CLEAN_IMAGE_CACHE" = "true" ]
       then
