--- a/.gitlab-ci/test.yml
+++ b/.gitlab-ci/test.yml
@@ -17,7 +17,7 @@ unit tests:
         - stackgres-k8s/src/*/target/surefire-reports/TEST-*.xml
 
 shell unit tests:
-  image: registry.gitlab.com/$CI_PROJECT_PATH/stackgres/it:12.0
+  image: registry.gitlab.com/$CI_PROJECT_PATH/stackgres/it:13.0
   stage: test
   tags:
     - stackgres-runner
@@ -43,9 +43,23 @@ shell unit tests:
       junit:
         - stackgres-k8s/src/operator/target/shell/shell-unit-tests-junit-report-*.xml
 
+swagger validations:
+  image: registry.gitlab.com/$CI_PROJECT_PATH/stackgres/it:13.0
+  stage: test
+  tags:
+    - stackgres-runner
+  script:
+    - |
+      yajsv -s stackgres-k8s/src/api-web/src/main/swagger/schema.json stackgres-k8s/src/api-web/target/swagger-merged.json
+  dependencies:
+    - build
+  artifacts:
+    expire_in: 1 week
+    when: always
+
 .e2e tests:
   stage: test
-  image: registry.gitlab.com/$CI_PROJECT_PATH/stackgres/it:12.0
+  image: registry.gitlab.com/$CI_PROJECT_PATH/stackgres/it:13.0
   tags:
     - stackgres-runner
   dependencies:
