--- a/.gitlab-ci/deploy.yml
+++ b/.gitlab-ci/deploy.yml
@@ -1,6 +1,6 @@
 
 .deploy image:
-  image: quay.io/buildah/stable:v1.15.0
+  image: quay.io/buildah/stable:v1.20.1
   stage: deploy
   tags:
     - stackgres-runner
@@ -25,35 +25,36 @@
 
 deploy operator jvm image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: "-jvm"
     IMAGE_NAME: "stackgres/operator"
 
 deploy restapi jvm image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: "-jvm"
     IMAGE_NAME: "stackgres/restapi"
 
 deploy jobs jvm image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: "-jvm"
     IMAGE_NAME: "stackgres/jobs"
 
+deploy cluster-controller jvm image:
+  extends: .deploy image
+  variables:
+    IMAGE_TAG_SUFFIX: "-jvm"
+    IMAGE_NAME: "stackgres/cluster-controller"
+
 deploy distributedlogs-controller jvm image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: "-jvm"
     IMAGE_NAME: "stackgres/distributedlogs-controller"
 
 deploy operator native image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: ""
     IMAGE_NAME: "stackgres/operator"
@@ -65,7 +66,6 @@ deploy operator native image:
 
 deploy restapi native image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: ""
     IMAGE_NAME: "stackgres/restapi"
@@ -77,7 +77,6 @@ deploy restapi native image:
 
 deploy job native image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: ""
     IMAGE_NAME: "stackgres/jobs"
@@ -89,14 +88,23 @@ deploy job native image:
 
 deploy adminui image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: ""
     IMAGE_NAME: "stackgres/admin-ui"
 
+deploy cluster-controller native image:
+  extends: .deploy image
+  variables:
+    IMAGE_TAG_SUFFIX: ""
+    IMAGE_NAME: "stackgres/cluster-controller"
+  only:
+    variables:
+      - $SKIP_DEPLOY != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_REF_NAME =~ /^development.*$/
+      - $SKIP_DEPLOY != "true" && $SKIP_NATIVE != "true" && $CI_COMMIT_TAG && $CI_COMMIT_TAG !~ /^latest-.*$/
+      - $DO_DEPLOY
+
 deploy distributedlogs-controller native image:
   extends: .deploy image
-  image: quay.io/buildah/stable:v1.15.0
   variables:
     IMAGE_TAG_SUFFIX: ""
     IMAGE_NAME: "stackgres/distributedlogs-controller"
