fix: support extra mounts for extensions

--- a/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
+++ b/stackgres-k8s/src/common/src/main/resources/crds/SGCluster.yaml
@@ -444,6 +444,12 @@ spec:
                             build:
                               type: string
                               description: The build version of the installed extension.
+                            extraMounts:
+                              type: array
+                              description: The extra mounts of the installed extension.
+                              items:
+                                type: string
+                                description: The extra mount of the installed extension.
                           required: ["name", "publisher", "version", "repository", "postgresVersion"]
                     required: ["name"]
                 dbOps:
