--- a/stackgres-k8s/src/common/src/main/resources/versions.properties
+++ b/stackgres-k8s/src/common/src/main/resources/versions.properties
@@ -1,7 +1,7 @@
-patroni=1.6.5-build-6.1
-prometheus-postgres-exporter=0.9.0-build-6.1
-postgresql=11.8-build-6.1,11.9-build-6.1,11.11-build-6.1,12.3-build-6.1,12.4-build-6.1,12.6-build-6.1
-envoy=1.17.1-build-6.1
-pgbouncer=1.15.0-build-6.1
-fluentbit=1.6.10-build-6.1
-fluentd=1.12.1-build-6.1
+patroni=1.6.5-build-6.2
+prometheus-postgres-exporter=0.9.0-build-6.2
+postgresql=11.6-build-6.2,11.7-build-6.2,11.8-build-6.2,11.9-build-6.2,11.10-build-6.2,11.11-build-6.2,12.1-build-6.2,12.2-build-6.2,12.3-build-6.2,12.4-build-6.2,12.5-build-6.2,12.6-build-6.2
+envoy=1.17.1-build-6.2
+pgbouncer=1.15.0-build-6.2
+fluentbit=1.6.10-build-6.2
+fluentd=1.12.1-build-6.2
